--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@phosphor-icons/react": "^2.0.13",
+    "@reduxjs/toolkit": "^1.9.7",
+    "axios": "^1.6.0",
     "next": "14.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
+    "react-redux": "^8.1.3",
+    "react-toastify": "^9.1.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10",
